--- a/DongGia-master/src/components/contact/index.sass
+++ b/DongGia-master/src/components/contact/index.sass
@@ -153,7 +153,7 @@
 				.box-img
 					figure
 						figcaption
-							bottom: -10%
+							bottom: -15%
 							padding: 0 2rem
 				.wrap-form
 					.frm-btnwrap
@@ -173,7 +173,7 @@
 							width: auto
 							height: 100%
 						figcaption
-							bottom: -5%
+							bottom: 0%
 							padding: 0 3rem
 				.wrap-form
 					flex: 0 0 50%
@@ -184,7 +184,7 @@
 				.box-img
 					figure
 						figcaption
-							bottom: -5%
+							bottom: 0%
 							padding: 0 4rem
 			@media (min-width: 992px)
 				.box-img
@@ -194,7 +194,7 @@
 						img
 							width: 100%
 						figcaption
-							bottom:-5%
+							bottom: 0%
 							padding: 0 2rem
 							h3
 								font-size: 18px
@@ -216,6 +216,12 @@
 				.wrap-form
 					flex: 0 0 60%
 					max-width: 60%
+			@media (min-width: 1440px)
+				.box-img
+					figure
+						figcaption
+							bottom: 7%
+							padding: 0 4rem
 .map
 	padding-top: 0
 	img
