--- a/DongGia-master/src/components/new-event/detail.pug
+++ b/DongGia-master/src/components/new-event/detail.pug
@@ -18,8 +18,9 @@ section.news
 		p Bên cạnh đó, từ ngày 1/9/2015, các công ty niêm yết có vốn sở hữu 100% của nước ngoài không thuộc lĩnh vực nhạy cảm sẽ được phép hoạt động. Theo ông Lê Vương Hùng, Giám đốc kinh doanh Công ty chứng khoán Rồng Việt, những quy định mới, không chỉ tác động đến lực cầu của thị trường mà các tác động đến sự đầu tư của DN nước ngoài. Vì vậy, các cổ phiếu BĐS trong thời gian gần đây đã thu hút khối ngoại rất nhiều.
 		p Cũng theo ông Hùng, hiện nay, các nhà đầu tư ngoại đang quan tâm đến các DN BĐS có quỹ đất sạch hoặc đang khó khăn về nguồn vốn và có ý định bán bớt dự án. Với sự trợ giúp của nguồn vốn ngoại, nhiều DN có cơ hội giảm hàng tồn kho và thị trường BĐS sẽ tăng mạnh giao dịch. Đặc biệt, những DN BĐS có cổ phiếu niêm yết trên thị trường chứng khoán sẽ thu hút nhiều khối ngoại hơn vì họ có thông tin minh bạch, rõ ràng. Phần lớn những cổ phiếu BĐS đang dẫn dắt thị trường hiện nay đã hết hoặc sắp hết room cho nhà đầu tư nước ngoài. Dự báo, thời gian tới, lực cầu sẽ còn tăng mạnh khi các DN quyết định mở room cho khối.
 		img.img-fluid(src="../img/new-event/news/news_banner_2.png", alt="", srcset="")
-		.share-link
-			a(href="https://www.facebook.com/sharer/sharer.php?u=sadasdasdas">Share on Facebook)
+		.social-link
+			a(href="https://www.facebook.com/sharer/sharer.php?u=")
+				span.mdi-facebook Share On Facebook
 section.otherNews
 	.container
 		h2.moduleTitle Tin Tức Khác
@@ -36,5 +37,3 @@ section.otherNews
 					img(src="../img/new-event/news_img_8.png", alt="", srcset="")
 				.swiper-slide
 					img(src="../img/new-event/news_img_9.png", alt="", srcset="")
-section.social-link
-
