--- a/DongGia-master/src/components/project/index.sass
+++ b/DongGia-master/src/components/project/index.sass
@@ -270,12 +270,8 @@
 				.fa-chevron-right
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f054"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
@@ -303,12 +299,8 @@
 				.fa-chevron-left
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f053"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
@@ -322,8 +314,11 @@
 					top: 3%
 					left: auto
 					background-image: none
-					background: #ffffff
+					background: transparent
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-right
+						&:before
+							color: #000
 				.swiper-button-prev
 					transform: translate(-27%,50%)
 					outline: none
@@ -332,8 +327,11 @@
 					bottom: auto
 					top: 3%
 					right: 5%
-					background: #ffffff
+					background: transparent
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-left
+						&:before
+							color: #000
 		@media (min-width: 1200px)
 			.btn-group
 				.swiper-button-prev
