--- a/DongGia-master/src/pages/_layout.pug
+++ b/DongGia-master/src/pages/_layout.pug
@@ -43,5 +43,6 @@ html(lang="en")
 			};
 			return t;
 			}(document, "script", "twitter-wjs"));
+		script(src="https://sp.zalo.me/plugins/sdk.js")
 		script(src="./js/global.min.js")
 		script(src="./js/main.min.js")
