--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -39,16 +39,15 @@
 			padding-top: 0
 		.btn-group
 			.swiper-button-next
-				transform: translate(20%,50%)
 				outline: none
 				background-image: none
 				width: 20px
 				height: 20px
 				position: absolute
 				top: auto
-				bottom: -3%
+				bottom: -5%
 				right: auto
-				left: 50%
+				left: 51%
 				display: flex
 				justify-content: center
 				align-items: center
@@ -59,23 +58,18 @@
 				.fa-chevron-right
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f054"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
 			.swiper-button-prev
-				transform: translate(10%,50%)
 				outline: none
 				background-image: none
 				width: 20px
 				height: 20px
 				position: absolute
-				bottom: -3%
+				bottom: -5%
 				top: auto
 				right: 51%
 				left: auto
@@ -89,12 +83,8 @@
 				.fa-chevron-left
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f053"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
@@ -110,6 +100,9 @@
 					background-image: none
 					background: #ffffff
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-right
+						&:before
+							color: #000
 				.swiper-button-prev
 					transform: translate(-27%,50%)
 					outline: none
@@ -120,6 +113,9 @@
 					right: 6%
 					background: #ffffff
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-left
+						&:before
+							color: #000
 		@media (min-width: 900px)
 			.btn-group
 				.swiper-button-prev
@@ -196,16 +192,15 @@
 	.container
 		.btn-group
 			.swiper-button-next
-				transform: translate(20%,50%)
 				outline: none
 				background-image: none
 				width: 20px
 				height: 20px
 				position: absolute
 				top: auto
-				bottom: -3%
+				bottom: -5%
 				right: auto
-				left: 50%
+				left: 51%
 				display: flex
 				justify-content: center
 				align-items: center
@@ -216,23 +211,18 @@
 				.fa-chevron-right
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f054"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
 			.swiper-button-prev
-				transform: translate(20%,50%)
 				outline: none
 				background-image: none
 				width: 20px
 				height: 20px
 				position: absolute
-				bottom: -3%
+				bottom: -5%
 				top: auto
 				right: 51%
 				left: auto
@@ -246,12 +236,8 @@
 				.fa-chevron-left
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f053"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
@@ -267,6 +253,9 @@
 					background-image: none
 					background: #ffffff
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-right
+						&:before
+							color: #000
 				.swiper-button-prev
 					transform: translate(-27%,50%)
 					outline: none
@@ -277,6 +266,9 @@
 					right: 6%
 					background: #ffffff
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-left
+						&:before
+							color: #000
 		@media (min-width: 900px)
 			.btn-group
 				.swiper-button-prev
