--- a/DongGia-master/src/components/new-event/index.sass
+++ b/DongGia-master/src/components/new-event/index.sass
@@ -115,6 +115,35 @@
 	@media (min-width: 992px)
 		.briefContent, p
 			text-align: left
+	.social-link
+		padding-top: 15px
+		display: inlline-block
+		text-align: left
+		a
+			display: inline-flex
+			text-decoration: none
+			padding-right: 10px
+			padding-bottom: 10px
+			span.mdi-facebook
+				width: 195px
+				height: 40px
+				background: #455fa2
+				display: inline-flex
+				justify-content: center
+				align-items: center
+				padding: 0
+				font-size: 14px
+				color: #ffffff
+				&:before
+					content: "\f20c"
+					font-family: "Material Design Icons"
+					font-weight: 400
+					width: 23px
+					height: 23px
+					display: flex
+					justify-content: center
+					align-items: center
+					font-size: 14px
 .otherNews
 	background: #f5f5f5
 	text-align: center
@@ -140,7 +169,7 @@
 				top: auto
 				bottom: -19%
 				right: auto
-				left: 50%
+				left: 51%
 				display: flex
 				justify-content: center
 				align-items: center
@@ -154,12 +183,8 @@
 				.fa-chevron-right
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f054"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
@@ -187,12 +212,8 @@
 				.fa-chevron-left
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f053"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
@@ -208,6 +229,9 @@
 					background-image: none
 					background: #f5f5f5
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-right
+						&:before
+							color: #000
 				.swiper-button-prev
 					transform: translate(-27%,50%)
 					outline: none
@@ -218,6 +242,9 @@
 					right: 5%
 					background: #f5f5f5
 					border-color: rgba(19, 28, 35, 0.1)
+					.fa-chevron-left
+						&:before
+							color: #000
 		@media (min-width: 1200px)
 			.btn-group
 				.swiper-button-prev
