--- a/DongGia-master/src/components/support/index.pug
+++ b/DongGia-master/src/components/support/index.pug
@@ -4,28 +4,32 @@ section.support
 		.module-faqs
 			h3 Câu hỏi thường gặp
 			p Mọi thắc mắc vui lòng liên hệ qua địa chỉ Email: Info@hoangthaiphu.vn
-			.support-question
-				.faqs.active
+			.FAQs-wrapper
+				.faqs.active(item='item-1')
 					.question
-						h4 What is Lorem Ipsum?
-						i
+						h4
+							span What is Lorem Ipsum?
+							span.mdi
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-				.faqs
+				.faqs(item='item-2')
 					.question
-						h4 Why do we use it?
-						i
+						h4
+							span Why do we use it?
+							span.mdi
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-				.faqs
+				.faqs(item='item-3')
 					.question
-						h4 Why do we use it?
-						i
+						h4
+							span Why do we use it?
+							span.mdi
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
-				.faqs.non-line
+				.faqs.non-line(item='item-4')
 					.question
-						h4 Why do we use it?
-						i
+						h4
+							span Why do we use it?
+							span.mdi
 					.answer
 						p It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
