--- a/DongGia-master/src/components/support/index.sass
+++ b/DongGia-master/src/components/support/index.sass
@@ -21,67 +21,71 @@
 			font-size: 15px
 			line-height: 2.067
 			color: rgb(102, 102, 102)
-		.support-question
+		.FAQs-wrapper
+			counter-reset: faqs
 			.faqs
 				position: relative
-				&:before
-					content: ""
-					position: absolute
-					display: inline-block
-					bottom: 0
-					width: 100%
-					height: 1px
-					background: #d1d1d1
 				.question
+					padding: 0 25px
 					position: relative
+					&:before
+						content: ""
+						display: inline-block
+						left: 0
+						width: 100%
+						height: 100%
+						padding: 0 25px
+						position: absolute
+						
 					h4
-						font-family: 'Montserrat', sans-serif
-						font-size: 15px
-						font-weight: 600
-						color: rgb(71, 71, 71)
-						line-height: 2.067
-						padding: 20px 0
-					i
-						display: flex
-						justify-content: center
+						display: inline-flex
+						justify-content: flex-start
 						align-items: center
+						width: 100%
+						position: relative
+						box-shadow: 0 1px 0 0px rgba(0,0,0,.3)
+						transition: .2s all ease-in-out
+						span:not(.mdi)
+							font-family: 'Montserrat', sans-serif
+							font-size: 15px
+							font-weight: 600
+							color: rgb(71, 71, 71)
+							line-height: 2.067
+							padding: 20px 0
+							display: inline-flex
+							justify-content: flex-start
+							align-items: center
+							width: 100%
+						span.mdi
+							&:before
+								content: "\f419"
+								font-family: "Material Design Icons"
+								font-weight: 400
+								display: inline-block
+								top: 50%
+							&:after
+								content: "\f377"
+								font-family: "Material Design Icons"
+								font-weight: 400
+								display: none
+								top: 50%
+				&.active
+					.answer
+						display: block
+					.question
+						h4
+							span.mdi
+								&:before
+									display: none
+								&:after
+									display: inline-block
+				&:hover
+					.question
 						&:before
-							display: flex
-							justify-content: center
-							align-items: center
-							position: absolute
-							top: 50%
-							right: 0
-							transform: translateY(-50%)
-							content: "\f067"
-							font-family: "Font Awesome 5 Free"
-							font-weight: 600
-							font-style: normal
-							width: 15px
-							height: 15px
-							line-height: 15px
-							font-size: 10px
-							border: 1px solid #000000
-							border-radius: 100%
-						&:after
-							display: none
-							justify-content: center
-							align-items: center
-							position: absolute
-							top: 50%
-							right: 0
-							content: "\f068"
-							font-family: "Font Awesome 5 Free"
-							font-weight: 600
-							font-style: normal
-							transform: translateY(25%)
-							width: 15px
-							height: 15px
-							line-height: 15px
-							font-size: 10px
-							border: 1px solid #000000
-							border-radius: 100%
+							box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3)
+							cursor: pointer
 				.answer
+					padding: 30px 25px
 					display: none
 					transition: .5s all ease-in-out
 					p
@@ -98,16 +102,11 @@
 						p
 							padding-bottom: 20px
 					.question
-						h4
-							padding-bottom: 0
-						i
-							&:before
-								display: none
-							&:after
-								display: flex
+						box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3)
 			.non-line
-				&:before
-					display: none
+				.question
+					box-shadow: none
+					transition: .2s all ease-in-out
 	@media (min-width: 992px)
 		.module-faqs
 			padding: 60px 95px 60px 65px
