--- a/DongGia-master/src/components/breadcrumb/index.pug
+++ b/DongGia-master/src/components/breadcrumb/index.pug
@@ -1,8 +1,10 @@
-.Module.breadcrumb-wrapper
-	ol.breadcrumb
-		li
-			a.itemcrumb(href='#')
-				span Home
-		li
-			a.itemcrumb.active(href='#')
-				span Our Brands
+.main-banner
+	.banner-item
+		img(src="../img/banner/b-1.png", alt="")
+	.breadcrumb
+			.container
+				ul
+					li.mdi-home
+						a(href="index.html")
+					li
+						a.active(href="") Home
