--- a/DongGia-master/src/components/employ/detail.pug
+++ b/DongGia-master/src/components/employ/detail.pug
@@ -75,28 +75,28 @@ section.other
 				a(href="").swiper-slide
 					.detail
 						h3 Thư ký Giám đốc
-						ul
+						.box-content
 							.location Nơi làm việc: Hồ Chí Minh
 							.education Trình độ: Cao đẳng
 							.salary Lương: ~10.000.000 VND
 				a(href="").swiper-slide
 					.detail
 						h3 Thư ký Giám đốc
-						ul
+						.box-content
 							.location Nơi làm việc: Hồ Chí Minh
 							.education Trình độ: Cao đẳng
 							.salary Lương: ~10.000.000 VND
 				a(href="").swiper-slide
 					.detail
 						h3 Thông tin khác
-						ul
+						.box-content
 							.location Nơi làm việc: Hồ Chí Minh
 							.education Trình độ: Cao đẳng
 							.salary Lương: ~10.000.000 VND
 				a(href="").swiper-slide
 					.detail
 						h3 Thông tin khác
-						ul
+						.box-content
 							.location Nơi làm việc: Hồ Chí Minh
 							.education Trình độ: Cao đẳng
 							.salary Lương: ~10.000.000 VND
