--- a/DongGia-master/src/components/employ/index.sass
+++ b/DongGia-master/src/components/employ/index.sass
@@ -24,6 +24,10 @@
 				padding-bottom: 10px
 				padding-left: 10px
 				padding-right: 10px
+				@media (max-width: 767.98px)
+					font-size: 14px
+				@media (max-width: 565.98px)
+					font-size: 13px
 		img
 			box-shadow: 3px 4px 13px 1px rgba(0, 0, 0, 0.4)
 			border: 3px solid #d3ae63
@@ -229,6 +233,12 @@
 		padding-bottom: 40px
 		padding-top: 60px
 		text-align: center
+		@media (max-width: 991.98px)
+			font-size: 35px
+		@media (max-width: 767.98px)
+			font-size: 33px
+		@media (max-width: 575.98px)
+			font-size: 30px
 	.col-6
 		width: 100%
 		padding: 0 10px
@@ -359,8 +369,7 @@
 						font-size: 15px
 						font-weight: 600
 						line-height: 40px
-					ul
-						list-style-type: none
+					.box-content
 						padding: 0
 						.salary, .education, .location
 							color: #474747
