--- a/DongGia-master/src/components/new-event/detail.pug
+++ b/DongGia-master/src/components/new-event/detail.pug
@@ -32,8 +32,26 @@ section.otherNews
 		.swiper-container
 			.swiper-wrapper
 				.swiper-slide
-					img(src="../img/new-event/news_img_7.png", alt="", srcset="")
+					figure
+						img(src="../img/new-event/news_img_7.png", alt="", srcset="")
+						figcaption
+							p
+								strong [30/12/2018] 
+								|  Bất động sản Việt Nam: Thu hút mạnh vốn ngoại
+
 				.swiper-slide
-					img(src="../img/new-event/news_img_8.png", alt="", srcset="")
+					figure
+						img(src="../img/new-event/news_img_8.png", alt="", srcset="")
+						figcaption
+							p
+								strong [30/12/2018] 
+								|  Bất động sản Việt Nam: Thu hút mạnh vốn ngoại
+
 				.swiper-slide
-					img(src="../img/new-event/news_img_9.png", alt="", srcset="")
+					figure
+						img(src="../img/new-event/news_img_9.png", alt="", srcset="")
+						figcaption
+							p
+								strong [30/12/2018] 
+								|  Bất động sản Việt Nam: Thu hút mạnh vốn ngoại
+
