--- a/DongGia-master/src/components/project/index.sass
+++ b/DongGia-master/src/components/project/index.sass
@@ -29,6 +29,12 @@
 							font-weight: 400
 							text-transform: none
 							text-align: center
+							@media (max-width: 991,98px)
+								font-size: 20px
+							@media (max-width: 767,98px)
+								font-size: 18px
+							@media (max-width: 565,98px)
+								font-size: 16px
 						p
 							text-align: center
 							display: flex
@@ -114,6 +120,10 @@
 					font-weight: 400
 					line-height: 1.6
 					text-align: left
+					@media (max-width: 767.98px)
+						font-size: 14px
+					@media (max-width: 565.98px)
+						font-size: 13px
 	@media (min-width: 992px)
 		display: flex
 		align-items: flex-start
@@ -152,6 +162,10 @@
 			line-height: 1.533
 			font-weight: 400
 			padding-bottom: 25px
+			@media (max-width: 767.98px)
+				font-size: 14px
+			@media (max-width: 565.98px)
+				font-size: 13px
 		img
 			padding-bottom: 30px
 	@media (min-width: 768px)
@@ -365,6 +379,12 @@
 								font-weight: 400
 								text-transform: none
 								text-align: center
+								@media (max-width: 991.98px)
+									font-size: 20px
+								@media (max-width: 767.98px)
+									font-size: 18px
+								@media (max-width: 565.98px)
+									font-size: 16px
 							p
 								text-align: center
 								font-family: "Roboto - Regular", sans-serif
