--- a/DongGia-master/src/components/support/index.pug
+++ b/DongGia-master/src/components/support/index.pug
@@ -5,7 +5,7 @@ section.support
 			h3 Câu hỏi thường gặp
 			p Mọi thắc mắc vui lòng liên hệ qua địa chỉ Email: Info@hoangthaiphu.vn
 			.FAQs-wrapper
-				.faqs.active(item='item-1')
+				.faqs(item='item-1')
 					.question
 						h4
 							span What is Lorem Ipsum?
