--- a/DongGia-master/src/pages/ability.pug
+++ b/DongGia-master/src/pages/ability.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "ability-page"
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/ability/index.pug
