--- a/DongGia-master/src/pages/contact.pug
+++ b/DongGia-master/src/pages/contact.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "lien-he-page"
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/contact/index.pug
