--- a/DongGia-master/src/pages/employ-detail.pug
+++ b/DongGia-master/src/pages/employ-detail.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "employ-page"
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/employ/detail.pug
