--- a/DongGia-master/src/pages/index.pug
+++ b/DongGia-master/src/pages/index.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "index-page"
 
 block main
+	include ../components/home_banner/index.pug
 	include ../components/home/index.pug
