--- a/DongGia-master/src/pages/new-event.pug
+++ b/DongGia-master/src/pages/new-event.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "tin-tuc-su-kien-page"
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/new-event/index.pug
