--- a/DongGia-master/src/pages/support.pug
+++ b/DongGia-master/src/pages/support.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "support-page"
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/support/index.pug
