--- a/DongGia-master/src/components/ability/index.sass
+++ b/DongGia-master/src/components/ability/index.sass
@@ -12,10 +12,13 @@
 				font-size: 15px
 				font-weight: 400
 				line-height: 1.6
-				text-align: justify
-			@media (min-width: 992px)
-				p
-					text-align: left
+				text-align: left
+				@media (max-width: 991.98px)
+					text-align: justify
+				@media (max-width: 767.98px)
+					font-size: 14px
+				@media (max-width: 565.98px)
+					font-size: 13px
 		.col-4
 			padding-bottom: 60px
 			position: relative
