--- a/DongGia-master/src/components/home/index.sass
+++ b/DongGia-master/src/components/home/index.sass
@@ -22,6 +22,12 @@
 			line-height: 1.556
 			padding-top: 20px
 			padding-bottom: 60px
+			@media (max-width: 991.98px)
+				font-size: 16px
+			@media (max-width: 767.98px)
+				font-size: 15px
+			@media (max-width: 575.98px)
+				font-size: 15px
 		@media (min-width: 768px)
 			flex: 0 0 50%
 			max-width: 50%
