--- a/DongGia-master/src/components/new-event/index.sass
+++ b/DongGia-master/src/components/new-event/index.sass
@@ -75,6 +75,12 @@
 		text-transform: uppercase
 		letter-spacing: 0.75px
 		padding-bottom: 10px
+		@media (max-width: 991.98px)
+			font-size: 26px
+		@media (max-width: 767.98px)
+			font-size: 22px
+		@media (max-width: 565.98px)
+			font-size: 20px
 	date
 		padding: 10px 0
 		color: #404040
@@ -82,6 +88,8 @@
 		font-size: 14px
 		font-weight: 400
 		line-height: 22px
+		@media (max-width: 767.98px)
+			font-size: 13px
 	.briefContent
 		text-align: justify
 		padding: 10px 0
@@ -92,6 +100,10 @@
 		line-height: 31px
 		letter-spacing: 0.4px
 		font-style: italic
+		@media (max-width: 767.98px)
+			font-size: 15px
+		@media (max-width: 565.98px)
+			font-size: 13px
 	h3
 		padding: 10px 0
 		color: #474747
@@ -109,6 +121,10 @@
 		font-size: 16px
 		font-weight: 400
 		letter-spacing: 0.4px
+		@media (max-width: 767.98px)
+			font-size: 14px
+		@media (max-width: 565.98px)
+			font-size: 13px
 	img
 		width: 100%
 		padding: 25px 0
@@ -264,14 +280,10 @@
 					figure
 						position: relative
 						figcaption
-							position: absolute
-							bottom: 0
-							left: 0
-							width: 100%
-							background: linear-gradient(rgba(0, 0, 0, 0), #000000cc)
-							padding-bottom: 1rem
+							color: #000
+							padding-top: 10px
 							h3
-								color: #ffffff
+								color: #000
 								font-family: 'Roboto', sans-serif
 								font-size: 22px
 								font-weight: 400
@@ -282,15 +294,5 @@
 								font-family: "Roboto - Regular", sans-serif
 								font-size: 13px
 								font-weight: 400
-								color: #ffffff
+								color: #000
 								text-align: center
-								.fa-arrow-right
-									display: inline-block
-									width: 20px
-									height: 20px
-									font-style: normal
-									&:after
-										content: "\f061"
-										font-family: "Font Awesome 5 Free"
-										font-weight: 600
-										color: #ffffff
