--- a/DongGia-master/src/components/support/index.sass
+++ b/DongGia-master/src/components/support/index.sass
@@ -44,7 +44,6 @@
 						width: 100%
 						position: relative
 						box-shadow: 0 1px 0 0px rgba(0,0,0,.3)
-						transition: .2s all ease-in-out
 						span:not(.mdi)
 							font-family: 'Montserrat', sans-serif
 							font-size: 15px
@@ -87,7 +86,6 @@
 				.answer
 					padding: 30px 25px
 					display: none
-					transition: .5s all ease-in-out
 					p
 						color: #666666
 						font-family: 'Montserrat', sans-serif
@@ -95,6 +93,9 @@
 						font-weight: 400
 						line-height: 31px
 						padding-left: 0
+						text-align: left
+						@media (max-width: 767.98px)
+							text-align: justify
 				&.active
 					.answer
 						display: block
