--- a/DongGia-master/src/pages/gallery.pug
+++ b/DongGia-master/src/pages/gallery.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "gallery-page"
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/gallery/index.pug
