--- a/DongGia-master/src/pages/project.pug
+++ b/DongGia-master/src/pages/project.pug
@@ -6,4 +6,5 @@ block var
 	- var bodyClass = "project-page"
 
 block main
+	include ../components/breadcrumb/index.pug
 	include ../components/project/index.pug
