--- a/DongGia-master/src/components/breadcrumb/index.sass
+++ b/DongGia-master/src/components/breadcrumb/index.sass
@@ -13,6 +13,15 @@
 		background: rgba(64, 64, 64, 0.502)
 		display: flex
 		align-items: center
+		@media (max-width: 991.98px)
+			height: 35px
+			font-size: 14px
+		@media (max-width: 767.98px)
+			height: 30px
+			font-size: 14px
+		@media (max-width: 575.98px)
+			height: 25px
+			font-size: 13px
 		ul
 			padding: 0
 			margin: 0
