--- a/DongGia-master/src/components/contact/index.sass
+++ b/DongGia-master/src/components/contact/index.sass
@@ -69,7 +69,7 @@
 									font-family: 'Font Awesome 5 Free'
 									font-weight: 600
 									font-size: 16px
-			.wrap-form
+			.Module-156
 				text-align: center
 				padding: 60px 30px
 				background-color: #f5f5f5
@@ -88,48 +88,47 @@
 					font-weight: 400
 					line-height: 22px
 					padding-bottom: 25px
-				.frm-content
-					.input-form
-						.form-group
-							label
-								display: flex
-								padding-bottom: .5rem
-								color: rgb(102, 102, 102)
-								font-family: 'Montserrat', sans-serif
-								font-size: 14px
-								font-style: italic
-								font-weight: 400
-								line-height: 1.571
-								text-align: left
-								padding-top: 20px
-						.qtext
-							input
-								padding: 0 1rem
+				.wrap-contact
+					.form-group
+						label
+							display: flex
+							padding-bottom: .5rem
+							color: rgb(102, 102, 102)
+							font-family: 'Montserrat', sans-serif
+							font-size: 14px
+							font-style: italic
+							font-weight: 400
+							line-height: 1.571
+							text-align: left
+							padding-top: 20px
+					.qtext
+						input
+							padding: 0 1rem
+							border-radius: 5px
+							width: 100%
+							height: 45px
+							border: 1px solid #e1e1e1
+							background-color: #f5f5f5
+							outline: none
+							&:focus
+								box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
 								border-radius: 5px
-								width: 100%
-								height: 45px
-								border: 1px solid #e1e1e1
+								border: 1px solid #d36e44
 								background-color: #f5f5f5
-								outline: none
-								&:focus
-									box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
-									border-radius: 5px
-									border: 1px solid #d36e44
-									background-color: #f5f5f5
-						.qparagraph
-							textarea
-								outline: none
-								width: 100%
-								height: 90px
+					.qparagraph
+						textarea
+							outline: none
+							width: 100%
+							height: 90px
+							border-radius: 5px
+							border: 1px solid #e1e1e1
+							background-color: #f5f5f5
+							padding: .5rem 1rem
+							&:focus
+								box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
 								border-radius: 5px
-								border: 1px solid #e1e1e1
+								border: 1px solid #d36e44
 								background-color: #f5f5f5
-								padding: .5rem 1rem
-								&:focus
-									box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.35)
-									border-radius: 5px
-									border: 1px solid #d36e44
-									background-color: #f5f5f5
 				.frm-btnwrap
 					text-align: right
 					padding-top: 22px
@@ -155,7 +154,7 @@
 						figcaption
 							bottom: -15%
 							padding: 0 2rem
-				.wrap-form
+				.Module-156
 					.frm-btnwrap
 						text-align: center
 			@media (min-width: 411px)
@@ -164,6 +163,11 @@
 						figcaption
 							bottom: 0%
 							padding: 0 3rem
+			@media (min-width: 411px)
+				.box-img
+					figure
+						figcaption
+							bottom: 20%
 			@media (min-width: 768px)
 				.box-img
 					flex: 0 0 50%
@@ -173,9 +177,9 @@
 							width: auto
 							height: 100%
 						figcaption
-							bottom: 0%
+							bottom: 20%
 							padding: 0 3rem
-				.wrap-form
+				.Module-156
 					flex: 0 0 50%
 					min-width: 50%
 					.frm-btnwrap
@@ -184,7 +188,7 @@
 				.box-img
 					figure
 						figcaption
-							bottom: 0%
+							bottom: 15%
 							padding: 0 4rem
 			@media (min-width: 992px)
 				.box-img
@@ -194,7 +198,7 @@
 						img
 							width: 100%
 						figcaption
-							bottom: 0%
+							bottom: 25%
 							padding: 0 2rem
 							h3
 								font-size: 18px
@@ -205,22 +209,21 @@
 				.box-img
 					figure
 						figcaption
-							bottom: 2%
 							padding: 0 3rem
 			@media (min-width: 1400px)
 				.box-img
 					figure
 						figcaption
-							bottom: 3%
+							bottom: 20%
 							padding: 0 4rem
-				.wrap-form
+				.Module-156
 					flex: 0 0 60%
 					max-width: 60%
 			@media (min-width: 1440px)
 				.box-img
 					figure
 						figcaption
-							bottom: 7%
+							bottom: 15%
 							padding: 0 4rem
 .map
 	padding-top: 0
