--- a/DongGia-master/src/components/gallery/index.pug
+++ b/DongGia-master/src/components/gallery/index.pug
@@ -26,22 +26,25 @@ section.gallery
 					.col-md-6
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_2.png")
-									img(src="./img/gallery/gallery_item_2.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_2.png")
+										img(src="./img/gallery/gallery_item_2.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
 					.col-md-6
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_3.png")
-									img(src="./img/gallery/gallery_item_3.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_3.png")
+										img(src="./img/gallery/gallery_item_3.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
 					.col
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_4.png")
-									img(src="./img/gallery/gallery_item_4.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_4.png")
+										img(src="./img/gallery/gallery_item_4.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
 			.col-lg-6
@@ -49,35 +52,40 @@ section.gallery
 					.col-md-6
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_5.png")
-									img(src="./img/gallery/gallery_item_5.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_5.png")
+										img(src="./img/gallery/gallery_item_5.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
 					.col-md-6
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_6.png")
-									img(src="./img/gallery/gallery_item_6.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_6.png")
+										img(src="./img/gallery/gallery_item_6.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
 					.col
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_7.png")
-									img(src="./img/gallery/gallery_item_7.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_7.png")
+										img(src="./img/gallery/gallery_item_7.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
 					.col-md-6
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_8.png")
-									img(src="./img/gallery/gallery_item_8.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_8.png")
+										img(src="./img/gallery/gallery_item_8.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
 					.col-md-6
 						.item
 							figure
-								a(href="./img/gallery/gallery_item_9.png")
-									img(src="./img/gallery/gallery_item_9.png", alt="")
+								.imgbox
+									a(href="./img/gallery/gallery_item_9.png")
+										img(src="./img/gallery/gallery_item_9.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
