--- a/DongGia-master/src/components/_footer/index.sass
+++ b/DongGia-master/src/components/_footer/index.sass
@@ -62,7 +62,6 @@ footer
 				font-family: 'Montserrat', sans-serif
 				font-size: 14px
 				font-weight: 400
-				line-height: 14px
 				padding-bottom: 20px
 				text-transform: uppercase
 				&:hover
@@ -184,11 +183,16 @@ footer
 			right: 0
 			padding-top: 10px
 			padding-right: 0
+			@media (max-width: 575.98px)
+				padding-left: 0
+				.ModuleContent
+					a
+						margin-left: 2px
+						margin-right: 2px
 			.ModuleContent
 				display: flex
 				a
 					border-radius: 100%
-					line-height: 30px
 					height: 30px
 					width: 30px
 					display: flex
