--- a/DongGia-master/src/components/gallery/index.pug
+++ b/DongGia-master/src/components/gallery/index.pug
@@ -39,7 +39,7 @@ section.gallery
 										img(src="./img/gallery/gallery_item_3.png", alt="")
 								.popup-icon
 									img(src="./img/gallery/popup/popup_icon_L.png", alt="")
-					.col
+					.col.resized
 						.item
 							figure
 								.imgbox
